# robair-follow-me

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  environment.sh  fablab.sublime-project  make.sh  package.xml
controleur/src/: controlleur.cpp  listener.cpp  listener.cpp~  talker.cpp
msg/: image.msg
tracker/: Makefile  tracker.bkl  tracker.sln  tracker.vcxproj  tracker.vcxproj.filters
tracker/include/: Application.hpp  ColorVideoStream.hpp  DepthVideoStream.hpp  FeatureCapture.hpp  LowPassFilter.hpp  MotorDriver.hpp  ObstaclesBasicTracker.hpp  PIDController.hpp  SlidingWindowTracker.hpp  TargetTracker.hpp  Utils.hpp  VideoStream.hpp  md.hpp  tracker.hpp
tracker/include/noros/: MotorDriver.hpp
tracker/src/: Application.cpp  ColorVideoStream.cpp  DepthVideoStream.cpp  FeatureCapture.cpp  LowPassFilter.cpp  MotorDriver.cpp  ObstaclesBasicTracker.cpp  PIDController.cpp  SlidingWindowTracker.cpp  TargetTracker.cpp  VideoStream.cpp  tracker.cpp
tracker/src/noros/: MotorDriver.cpp  tracker.cpp
